# robbo-obibok

./: -  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MAINTAINABILITY_PLAN.md  Makefile  POST_REFACTOR_PLAN.md  README.md  _check_composers.py  app_bootstrap.py  app_context.py  app_services.py  app_state.py  archive_catalog.py  archive_downloads.py  archive_runtime.py  archiwum  asma-bot.py  asma-bot.service  asma_cache.json  ay_cache.json  boot_runtime.py  bot_dependencies.py  bot_events.py  bot_persistence.py  bot_runtime.py  build_asma_index.py  build_hvsc_index.py  build_modarchive_index.py  build_snes_index.py  build_tiny_index.py  collection_catalog.py  collection_service.py  config.yaml  domain_config.py  domain_services.py  download_modarchive_bulk.py  download_safety.py  (+98 more)
.hermes/: BACKLOG.md  baseline-results.md  ci-baseline.md  integration-requirements.md
deploy/: robbo-obibok-strict.service
docs/: POST_REFACTOR_PLAN.md  audio-setup.md
playlists/: 48.json
references/: tracker-volume-analysis.md
scripts/: build_ay_index.py  build_modarchive_index.py  build_snes_index.py  build_tiny_index.py  build_ym_index.py  download_modarchive_bulk.py  extract_modarchive_local.py  install.sh  test_launchers.sh
src/: __init__.py  archive_catalog.py  archive_downloads.py  archive_runtime.py  bot_dependencies.py  bot_events.py  bot_persistence.py  bot_runtime.py  collection_catalog.py  collection_service.py  collection_specs.py  domain_archive_config.py  domain_config.py  domain_context.py  domain_services.py  domain_state.py  entrypoint_app.py  entrypoint_bootstrap.py  entrypoint_callback_groups.py  entrypoint_components.py  entrypoint_executable_assembly.py  entrypoint_glue.py  entrypoint_launcher_loader.py  entrypoint_module.py  entrypoint_module_bindings.py  entrypoint_runtime.py  entrypoint_runtime_surface.py  entrypoint_runtime_tasks.py  entrypoint_state.py  entrypoint_surface_assembly.py  library_commands.py  playback_assets.py  playback_commands.py  (+16 more)
(+131 files in other folders)
