[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "robbo-obibok"
version = "0.1.0"
description = "Discord chiptune radio bot"
requires-python = ">=3.11,<3.14"
dependencies = [
    "discord.py[voice]>=2.3,<3",
    "pynacl>=1.5,<2",
    "aiohttp>=3.9,<4",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.11,<1",
]

[project.scripts]
robbo-obibok = "robbo_obibok.robbo_obibok_runtime:main"
robbo-obibok-strict = "robbo_obibok.robbo_obibok_runtime:main_strict"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"scripts/*" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["robbo_obibok"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/robbo_obibok"]
omit = ["*/__pycache__/*"]

[tool.coverage.report]
fail_under = 65
show_missing = true
